// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accounts component hiển thị Sidebar, Toolbar và bảng danh sách tài khoản 1`] = `
<div>
  <div
    class="sc-Qotzb kXLuAq"
  >
    <div
      data-testid="sidebar"
    >
      Sidebar
    </div>
    <div
      class="sc-fYsHOw hProzk"
    >
      <div
        class="sc-dKREkF hByvrG"
      >
        <div>
          <button
            class="sc-fWnslK csgtCp"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              />
            </svg>
             THÊM
          </button>
        </div>
        <div>
          <input
            class="sc-dIMoHT jTrrWb"
            placeholder="Tìm kiếm tài khoản..."
            type="text"
            value=""
          />
        </div>
      </div>
      <h2>
        DANH SÁCH TÀI KHOẢN
      </h2>
      <div
        class="sc-icnseD zmpJf"
      >
        <table
          class="sc-iQQCXo cnbbzt"
        >
          <thead>
            <tr>
              <th
                class="sc-gDpztx kPBlum"
              >
                STT
              </th>
              <th
                class="sc-gDpztx kPBlum"
              >
                Tên tài khoản
              </th>
              <th
                class="sc-gDpztx kPBlum"
              >
                Nhân viên
              </th>
              <th
                class="sc-gDpztx kPBlum"
              >
                Quyền
              </th>
              <th
                class="sc-gDpztx kPBlum"
              >
                Trạng thái
              </th>
              <th
                class="sc-gDpztx kPBlum"
              >
                Hành động
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                1
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                user1
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                emp1 - Nguyen Van A
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                Nhân viên bán hàng
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                Hoạt động
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                <button
                  class="sc-fWnslK csgtCp"
                >
                  Sửa
                </button>
                <button
                  class="sc-fWnslK csgtCp"
                  style="margin-left: 0.25rem;"
                >
                  Xóa
                </button>
                <button
                  class="sc-fWnslK csgtCp"
                  style="margin-left: 0.25rem;"
                >
                  Vô hiệu hóa
                </button>
              </td>
            </tr>
            <tr>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                2
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                user2
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                emp2 - Tran Thi B
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                Nhân viên quản lí sản phẩm
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                Vô hiệu
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                <button
                  class="sc-fWnslK csgtCp"
                >
                  Sửa
                </button>
                <button
                  class="sc-fWnslK csgtCp"
                  style="margin-left: 0.25rem;"
                >
                  Xóa
                </button>
                <button
                  class="sc-fWnslK csgtCp"
                  style="margin-left: 0.25rem;"
                >
                  Kích hoạt
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accounts component hiển thị form khi nhấn nút THÊM và chụp snapshot 1`] = `
<div>
  <div
    class="sc-Qotzb kXLuAq"
  >
    <div
      data-testid="sidebar"
    >
      Sidebar
    </div>
    <div
      class="sc-fYsHOw hProzk"
    >
      <div
        class="sc-dKREkF hByvrG"
      >
        <div>
          <button
            class="sc-fWnslK csgtCp"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              />
            </svg>
             THÊM
          </button>
        </div>
        <div>
          <input
            class="sc-dIMoHT jTrrWb"
            placeholder="Tìm kiếm tài khoản..."
            type="text"
            value=""
          />
        </div>
      </div>
      <form
        class="sc-jJAtPt fRoCkq"
      >
        <input
          class="sc-cUiCeM eJGRoA"
          placeholder="Tên tài khoản"
          required=""
          type="text"
          value=""
        />
        <input
          class="sc-cUiCeM eJGRoA"
          placeholder="Mật khẩu"
          required=""
          type="password"
          value=""
        />
        <select
          aria-label="Chọn quyền"
          class="sc-jScdur cgBdPR"
          required=""
        >
          <option
            value=""
          >
            Chọn quyền
          </option>
          <option
            value="2"
          >
            Nhân viên bán hàng
          </option>
          <option
            value="3"
          >
            Nhân viên quản lý sản phẩm
          </option>
        </select>
        <select
          aria-label="Chọn nhân viên"
          class="sc-jScdur cgBdPR"
        >
          <option
            value=""
          >
            Không gắn nhân viên
          </option>
          <option
            disabled=""
            value="emp1"
          >
            emp1 - Nguyen Van A (đã có tài khoản)
          </option>
          <option
            disabled=""
            value="emp2"
          >
            emp2 - Tran Thi B (đã có tài khoản)
          </option>
          <option
            value="emp3"
          >
            emp3 - Le Thi C
          </option>
        </select>
        <div
          style="display: flex; gap: 1rem;"
        >
          <button
            class="sc-fWnslK csgtCp"
            type="submit"
          >
            Tạo tài khoản
          </button>
          <button
            class="sc-fWnslK csgtCp"
            type="button"
          >
            Hủy
          </button>
        </div>
      </form>
      <h2>
        DANH SÁCH TÀI KHOẢN
      </h2>
      <div
        class="sc-icnseD zmpJf"
      >
        <table
          class="sc-iQQCXo cnbbzt"
        >
          <thead>
            <tr>
              <th
                class="sc-gDpztx kPBlum"
              >
                STT
              </th>
              <th
                class="sc-gDpztx kPBlum"
              >
                Tên tài khoản
              </th>
              <th
                class="sc-gDpztx kPBlum"
              >
                Nhân viên
              </th>
              <th
                class="sc-gDpztx kPBlum"
              >
                Quyền
              </th>
              <th
                class="sc-gDpztx kPBlum"
              >
                Trạng thái
              </th>
              <th
                class="sc-gDpztx kPBlum"
              >
                Hành động
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                1
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                user1
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                emp1 - Nguyen Van A
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                Nhân viên bán hàng
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                Hoạt động
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                <button
                  class="sc-fWnslK csgtCp"
                >
                  Sửa
                </button>
                <button
                  class="sc-fWnslK csgtCp"
                  style="margin-left: 0.25rem;"
                >
                  Xóa
                </button>
                <button
                  class="sc-fWnslK csgtCp"
                  style="margin-left: 0.25rem;"
                >
                  Vô hiệu hóa
                </button>
              </td>
            </tr>
            <tr>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                2
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                user2
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                emp2 - Tran Thi B
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                Nhân viên quản lí sản phẩm
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                Vô hiệu
              </td>
              <td
                class="sc-kpOvIu fgGvEI"
              >
                <button
                  class="sc-fWnslK csgtCp"
                >
                  Sửa
                </button>
                <button
                  class="sc-fWnslK csgtCp"
                  style="margin-left: 0.25rem;"
                >
                  Xóa
                </button>
                <button
                  class="sc-fWnslK csgtCp"
                  style="margin-left: 0.25rem;"
                >
                  Kích hoạt
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
